# ax-cache

./: .gitignore  CLAUDE.MD  Cargo.toml  Makefile  README.md  benchmark_results.csv  prompt.md
benches/: contention.rs  head_to_head_moka_contention.rs  head_to_head_moka_single.rs  head_to_head_moka_zipfian.rs  scan_resistance.rs  single_thread.rs  soak_test.rs  zipfian.rs
crates/axcache-alloc/: Cargo.toml
crates/axcache-alloc/src/: lib.rs  slab.rs
crates/axcache-axhash/: Cargo.toml
crates/axcache-axhash/benches/: throughput.rs
crates/axcache-axhash/src/: folded_mul.rs  lib.rs
crates/axcache-axhash/tests/: avalanche.rs
crates/axcache-engine/: Cargo.toml
crates/axcache-engine/src/: lib.rs  protocol.rs  resp.rs  spsc.rs  worker.rs
crates/axcache-evict/: Cargo.toml
crates/axcache-evict/src/: lib.rs  s3_fifo.rs  sieve.rs
crates/axcache-io/: Cargo.toml
crates/axcache-io/src/: buffer.rs  lib.rs  net.rs  snapshot.rs
crates/axcache-store/: Cargo.toml
crates/axcache-store/src/: dashtable.rs  lib.rs  shard.rs  simd_scan.rs
examples/: diagnostics.rs
src/: lib.rs  main.rs  maintenance.rs  metrics.rs  policy.rs  shard.rs  tinylfu.rs
