[workspace.package]
version = "0.1.0"
authors = ["Bagus Dwi Harianto <robbymangkualam2000@gmail.com>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/robby031/axcache"
description = "AxCache: High-performance zero-tax cache engine."

[package]
name = "axcache"
version = "0.1.0"
edition = "2024"

[dependencies]
