[package]
name = "ax-cache"
version = "0.2.1"
edition = "2024"
authors = ["Bagus Dwi Harianto <robbymangkualam2000@gmail.com>"]
license = "MIT"
repository = "https://github.com/robby031/ax-cache"
description = "Hardware-aware concurrent cache engine."
keywords = ["cache", "concurrent", "swisstable", "s3-fifo", "performance"]
categories = ["caching", "concurrency", "data-structures"]
readme = "README.md"

[dependencies]
axhash-core = "0.12.0"
axhash-map = "0.1.5"
hashbrown = { version = "0.17.1", default-features = false, features = ["raw-entry", "default-hasher", "inline-more"] }
parking_lot = "0.12.5"
slab        = "0.4.12"

[dev-dependencies]
hdrhistogram = "7.5.4"
rand = { version = "0.10.1", features = ["std"] }
rand_distr   = "0.6.0"
criterion = "0.8.2"
moka = { version = "0.12", features = ["sync"] }

[[bench]]
name = "single_thread"
harness = false

[[bench]]
name = "zipfian"
harness = false

[[bench]]
name = "contention"
harness = false

[[bench]]
name = "scan_resistance"
harness = false

[[bench]]
name = "head_to_head_moka_single"
harness = false

[[bench]]
name = "head_to_head_moka_contention"
harness = false

[[bench]]
name = "head_to_head_moka_zipfian"
harness = false

[[bench]]
name = "soak_test"
harness = false

