[package]
name = "axcache-axhash"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Hash engine untuk AxCache."



[dependencies]
axhash = "0.7.9"
rand.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name = "throughput"
harness = false