[package]
name = "axcache-engine"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Engine utama AxCache."

[dependencies]
core_affinity.workspace = true
monoio.workspace = true
rkyv.workspace = true
axcache-store = { path = "../axcache-store" }
axcache-io = { path = "../axcache-io" }
rand.workspace = true
